docker搭建极限运动的活动

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-APP_ENV=local
+APP_ENV={{ app_env }}
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_KEY=hKC4IAhi3F4znBTXa1Hy9Rb1Htq3YPme
 
 #数据库配置
 DB_CONNECTION=mysql
-DB_HOST=172.17.0.1
-DB_PORT=33602
-DB_DATABASE=bjsea_run
-DB_USERNAME=bjsea_user
-DB_PASSWORD=123qwe
-DB_PREFIX=run_
+DB_HOST={{ db_host }}
+DB_PORT={{ mysql_port }}
+DB_DATABASE={{ db_database }}
+DB_USERNAME={{ db_user }}
+DB_PASSWORD={{ db_pwd }}
+DB_PREFIX={{ db_prefix }}
 DB_TIMEZONE=+08:00
 
 #缓存配置信息
-CACHE_DRIVER=redis
+CACHE_DRIVER={{ cache_driver }}
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
